// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty size m 1`] = `
.c0 {
  display: inline-block;
  font-weight: normal;
}

.c0 .c1 {
  font-size: 15px;
  line-height: 18px;
}

<div
  class="c0"
/>
`;

exports[`empty size s 1`] = `
.c0 {
  display: inline-block;
  font-weight: normal;
}

.c0 .c1 {
  font-size: 13px;
  line-height: 15px;
}

<div
  class="c0"
/>
`;

exports[`with main and secondary size m 1`] = `
.c2 {
  color: #b8bec3;
  font-size: 13px;
  line-height: 15px;
}

.c3 .c1 {
  font-size: 13px;
  line-height: 15px;
}

.c0 {
  display: inline-block;
  font-weight: normal;
}

.c0 .c1 {
  font-size: 15px;
  line-height: 18px;
}

<div
  class="c0"
>
  <div
    class="c1 "
  >
    anything
  </div>
  <div
    class="c2"
  >
    anything
  </div>
</div>
`;

exports[`with main and secondary size s 1`] = `
.c2 {
  color: #b8bec3;
  font-size: 13px;
  line-height: 15px;
}

.c0 {
  display: inline-block;
  font-weight: normal;
}

.c0 .c1 {
  font-size: 13px;
  line-height: 15px;
}

<div
  class="c0"
>
  <div
    class="c1 "
  >
    anything
  </div>
  <div
    class="c2"
  >
    anything
  </div>
</div>
`;

exports[`with main size m 1`] = `
.c2 .c1 {
  font-size: 13px;
  line-height: 15px;
}

.c0 {
  display: inline-block;
  font-weight: normal;
}

.c0 .c1 {
  font-size: 15px;
  line-height: 18px;
}

<div
  class="c0"
>
  <div
    class="c1 "
  >
    anything
  </div>
</div>
`;

exports[`with main size s 1`] = `
.c0 {
  display: inline-block;
  font-weight: normal;
}

.c0 .c1 {
  font-size: 13px;
  line-height: 15px;
}

<div
  class="c0"
>
  <div
    class="c1 "
  >
    anything
  </div>
</div>
`;

exports[`with secondary size m 1`] = `
.c1 {
  color: #b8bec3;
  font-size: 13px;
  line-height: 15px;
}

.c0 {
  display: inline-block;
  font-weight: normal;
}

.c0 .c2 {
  font-size: 15px;
  line-height: 18px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    anything
  </div>
</div>
`;

exports[`with secondary size s 1`] = `
.c1 {
  color: #b8bec3;
  font-size: 13px;
  line-height: 15px;
}

.c0 {
  display: inline-block;
  font-weight: normal;
}

.c0 .c2 {
  font-size: 13px;
  line-height: 15px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    anything
  </div>
</div>
`;
